--- a/style.css
+++ b/style.css
@@ -1,15 +1,63 @@
 
  * {
     box-sizing: border-box;
-    
+    padding: 0;
+    margin: 0;
 
  }
  
- h1 {
-    display: block;
-    font-size: 2em;
-    
+ body {
+background-color: whitesmoke;
+
  }
+ 
+ .header {
+    padding: 14px;
+    font-family: cursive;
+    background-color: rgb(191, 170, 214);
+    color: deeppink;
+     
+ }
+ 
+ .header h1 {
+    display: inline-block;
+    font-size: 45px;
+ }
+ 
+ .header h1 {
+    color: darkblue;
+    font-size: 40px;
+
+
+ }
+.header h2 {
+    color: aqua;
+
+}
+
+ .header div {
+    padding-top: 15px;
+    margin-top: 20px;
+    float: right;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 30px;
+    color: black;
+}
+
+.header nav ul {
+    list-style: none;
+}
+.header nav ul li {
+    display: inline-block;
+    margin-left: 25 px;
+}
+.hero {
+   
+
+
+}
+
+
  nav {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
